Remove URLs from index.html
Updated links and references in index.html to be empty.

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2507.07136"
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -135,7 +135,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=KBz8lVPt7z4"
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -395,10 +395,10 @@
       title={Real2Edit2Real: Generating Robotic Demonstrations via a 3D Control Interface}, 
       author={Yujie Zhao and Hongwei Fan and Di Chen and Shengcong Chen and Liliang Chen and Xiaoqi Li and Guanghui Ren and Hao Dong},
       year={2025},
-      eprint={2507.07136},
+      eprint={},
       archivePrefix={arXiv},
-      primaryClass={cs.GR},
-      url={https://arxiv.org/abs/2507.07136}, 
+      primaryClass={cs.RO},
+      url={}, 
 }</code></pre>
   </div>
 </section>
