Update author link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <a href="https://scholar.google.com/citations?user=Ht9e9D4AAAAJ&hl=en">Di Chen</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://real2edit2real.github.io">Shengcong Chen</a><sup>3</sup>,
+              <a href="https://scholar.google.com/citations?user=C8tdixEAAAAJ&hl=en">Shengcong Chen</a><sup>3</sup>,
             </span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=TivepIgAAAAJ&hl=en">Liliang Chen</a><sup>3</sup>,
