--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://www.youtube.com/watch?v=V_jAVjpcgBE"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -395,10 +395,10 @@
       title={Real2Edit2Real: Generating Robotic Demonstrations via a 3D Control Interface}, 
       author={Yujie Zhao and Hongwei Fan and Di Chen and Shengcong Chen and Liliang Chen and Xiaoqi Li and Guanghui Ren and Hao Dong},
       year={2025},
-      eprint={},
+      eprint={2512.19402},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
-      url={}, 
+      url={https://arxiv.org/abs/2512.19402}, 
 }</code></pre>
   </div>
 </section>
