Update author contributions and add job section
Added a section for job opportunities and updated author contribution notes.

Signed-off-by: Hongwei Fan <43400050+hwfan@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <span class="author-block">
               <a href="https://github.com/ZhaoYujie2002">Yujie Zhao</a><sup>1,2*</sup>,</span>
             <span class="author-block">
-              <a href="https://hwfan.io/about-me/">Hongwei Fan</a><sup>1,2*</sup>,
+              <a href="https://hwfan.io/about-me/">Hongwei Fan</a><sup>1,2*†</sup>,
             </span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=Ht9e9D4AAAAJ&hl=en">Di Chen</a><sup>3</sup>,
@@ -96,7 +96,7 @@
               <a href="https://zsdonghao.github.io/">Hao Dong</a><sup>1,2</sup>
             </span>
             <span class="author-block">
-              (* indicates equal contribution)
+              (*: equal contribution, †: project lead)
             </span>
           </div>
 
@@ -403,6 +403,22 @@
   </div>
 </section>
 
+<section class="section">
+<div class="container is-max-desktop">
+  <div class="columns is-centered has-text-centered">
+    <div class="column is-full-width">
+      <h3 class="title is-3">Join Us</h3>
+      <div class="content has-text-justified">
+        <p>
+          We are hiring innovative undergraduate/graduate students, working on robotics and world model. If you are interested, don't hesitate to send E-mail to: <strong>hwfan25[at]stu.pku.edu.cn or hao.dong[at]pku.edu.cn</strong>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+  
 <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
